working on download methods
